# chitchatrustserver

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  generate-env.bat  generate-env.sh
.github/workflows/: rust.yml
MariaDB/: docker-compose.yml  generate-env.bat
MongoDB/: docker-compose.yml
src/: lib.rs  main.rs
src/db/: db.rs  mod.rs
src/logger/: logger.rs
src/modules/: group.rs  message.rs  user.rs
src/utils/: communication_structs.rs  db_waiter.rs  encryption.rs  env_provider.rs  file_gen.rs  logics.rs  mod.rs  tls_cert.rs  tls_gen.rs  token.rs  xtime.rs
tests/: MariaDBtest.rs  encryption_test.rs  env_test.rs  logic_test.rs  mongoDBtest.rs  token_test.rs  xtime_test.rs
