[package]
name = "chitchatrustserver"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
chrono-tz = "0.5"
mysql = "25"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
lazy_static = "1.5.0"
rand = "0.9.1"
base64 = "0.22.1"
rustls = "0.23.26"
rocket = "0.5.1"
futures = "0.3.31"
tokio-stream = "0.1.17"
tokio-rustls-acme = "0.7.1"
